Revert tentative to fix monospace fonts on mobile browsers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 }
 html {
   color: var(--base00);
-  font-family: 'Roboto Mono', 'Courier New', monospace;
+  font-family: 'Roboto Mono', monospace;
   font-size: 15px;
   line-height: 1.6em;
 }
@@ -120,7 +120,6 @@ figure h4::before {
 code {
   background-color: var(--base2);
   padding: .1em .2em;
-  font-family: 'Roboto Mono', 'Courier New', monospace;
 }
 
 pre {
@@ -128,7 +127,6 @@ pre {
   line-height: 1.4;
   overflow-x: auto;
   padding: 1em;
-  font-family: 'Roboto Mono', 'Courier New', monospace;
 }
 
 .highlight pre ::selection {
@@ -141,7 +139,6 @@ pre code {
   color: inherit;
   font-size: 100%;
   padding: 0;
-  font-family: 'Roboto Mono', 'Courier New', monospace;
 }
 
 /* Containers */
